# voice-to-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: generate_daily_todos.py  process_transcript.py  transcribe_recording.py
src/voice_to_notes/: __init__.py  models.py  transcribe.py
